clang/test/BSC/Negative/Generic/StructAndFunction/redefinition_function/redefinition_template.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

void func1<T>() {} // expected-note {{previous definition is here}}
void func1<T>() {} // expected-error {{redefinition of 'func1'}}
